gke/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openlang-service-ui
spec:
  selector:
    app: openlang-ui
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
