gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ui
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "my-app-ip"
    networking.gke.io/managed-certificates: "mysert"
spec:
  rules:
  - host: openlang.one
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: openlang-service-ui
            port:
              number: 3000
